data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_591.wast
;; 2. **Loop within Conditional with br_table**:    - Test Description: Implement a scenario with a loop inside an `if` condition that branches using `br_table` to different labels based on conditional evaluation.    - Constraint: Verify the handling of `br_table` within nested structures, particularly the label vector indexing.    - Relation: This test exercises nested conditional and loop contexts to detect errors in label stack management and branching to correct depths.

(assert_invalid
  (module
    (func (param i32)
      (if (i32.eqz (local.get 0))
        (then
          (loop (result i32)
            (br_table 0 1 2 (local.get 0))
          )
        )
      )
    )
  )
  "type mismatch"
)